--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="accelerometer">Accelerometer</string>
     <string name="placeholder">placeHolder</string>
     <string name="light">Light</string>
+    <string name="gyroscope">GyroScope</string>
+    <string name="right">Right</string>
+    <string name="left">Left</string>
 </resources>
